--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,13 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# mac osx specific files
+.DS_Store
+
+# PyCharm
+.idea/
+.idea_modules/
+
+# Extra
+tmpfile
